--- a/package.json
+++ b/package.json
@@ -5,8 +5,14 @@
   "main": "index.js",
   "scripts": {
     "cover": "LOG_LEVEL=trace istanbul cover -x '*.test.js' _mocha",
+    "check-coverage": "istanbul check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "test": "LOG_LEVEL=trace mocha $@",
     "test-watch": "LOG_LEVEL=trace mocha -w"
+  },
+  "config": {
+    "ghooks": {
+      "pre-push": "npm run cover && npm run check-coverage"
+    }
   },
   "repository": {
     "type": "git",
