--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "A very simplistic logger that allows one to avoid using the console.log directly allowing stubbing and better linting.",
   "main": "index.js",
   "scripts": {
-    "cover": "LOG_LEVEL=trace nyc -x spec --reporter=lcov --reporter=text mocha spec --recursive",
+    "cover": "LOG_LEVEL=trace nyc -x test --reporter=lcov --reporter=text mocha test --recursive",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "check-lint": "standard *.js lib/*.js spec/*.js spec/lib/*.js",
+    "check-lint": "standard *.js lib/*.js test/*.js",
     "fix-lint": "standard --fix *.js lib/*.js test/*.js",
-    "test": "LOG_LEVEL=trace mocha spec --recursive $@",
-    "test-watch": "LOG_LEVEL=trace mocha spec --recursive -w"
+    "test": "LOG_LEVEL=trace mocha --recursive $@",
+    "test-watch": "LOG_LEVEL=trace mocha --recursive -w"
   },
   "config": {
     "ghooks": {
@@ -31,7 +31,6 @@
   },
   "homepage": "https://github.com/EveryMundo/simple-logr#readme",
   "devDependencies": {
-    "@everymundo/cleanrequire": "^1.2.1",
     "chai": "^4.2.0",
     "ghooks": "^2.0.4",
     "mocha": "^6.2.0",
