--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "homepage": "https://github.com/EveryMundo/simple-logr#readme",
   "devDependencies": {
+    "@everymundo/cleanrequire": "^1.2.1",
     "chai": "^4.2.0",
     "ghooks": "^2.0.4",
     "mocha": "^6.2.0",
