--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "2.2.4",
   "description": "A very simplistic logger that allows one to avoid using the console.log directly allowing stubbing and better linting.",
   "main": "index.js",
+  "module": "index.mjs",
   "scripts": {
-    "cover": "LOG_LEVEL=trace nyc -x test --reporter=lcov --reporter=text mocha test --recursive",
+    "cover": "LOG_LEVEL=silent nyc -x test --reporter=lcov --reporter=text mocha test --recursive",
     "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
-    "check-lint": "standard *.js lib/*.js test/*.js",
-    "fix-lint": "standard --fix *.js lib/*.js test/*.js",
-    "test": "LOG_LEVEL=trace mocha --recursive $@",
-    "test-watch": "LOG_LEVEL=trace mocha --recursive -w"
+    "check-lint": "standard *js lib/*js test/*js",
+    "fix-lint": "standard --fix *js lib/*js test/*js",
+    "test": "LOG_LEVEL=silent mocha --recursive $@",
+    "test-watch": "LOG_LEVEL=silent mocha --recursive -w"
   },
   "config": {
     "ghooks": {
@@ -32,14 +33,19 @@
   "homepage": "https://github.com/EveryMundo/simple-logr#readme",
   "devDependencies": {
     "@everymundo/cleanrequire": "^1.2.1",
-    "chai": "^4.2.0",
+    "@std/esm": "^0.26.0",
+    "c8": "^7.12.0",
+    "chai": "^4.3.6",
+    "coverage-node": "^8.0.0",
+    "esm": "^3.2.25",
     "ghooks": "^2.0.4",
-    "mocha": "^7.1.1",
-    "nyc": "^15.0.0",
-    "sinon": "^9.0.1",
-    "standard": "^14.3.3"
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
+    "sinon": "^14.0.0",
+    "standard": "^17.0.0"
   },
   "dependencies": {
-    "pino": "^5.17.0"
+    "flatstr": "^1.0.12",
+    "pino": "^8.5.0"
   }
 }
