--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "module": "index.mjs",
   "scripts": {
-    "cover": "LOG_LEVEL=silent nyc -x test --reporter=lcov --reporter=text mocha test --recursive",
-    "check-coverage": "nyc check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
+    "cover": "LOG_LEVEL=silent c8 -x test --reporter=lcov --reporter=text mocha test --recursive",
+    "check-coverage": "LOG_LEVEL=silent c8 check-coverage --statements 100 --branches 100 --functions 100 --lines 100",
     "check-lint": "standard *js  *mjs  *cjs test/*js",
     "fix-lint": "standard --fix *js  *mjs  *cjs test/*js",
     "test": "LOG_LEVEL=silent mocha --recursive $@",
@@ -34,17 +34,16 @@
   "devDependencies": {
     "@everymundo/cleanrequire": "^1.2.4",
     "@std/esm": "^0.26.0",
-    "c8": "^7.13.0",
-    "chai": "^4.3.7",
+    "c8": "^8.0.1",
+    "chai": "^4.3.10",
     "coverage-node": "^8.0.0",
     "esm": "^3.2.25",
     "mocha": "^10.2.0",
-    "nyc": "^15.1.0",
-    "sinon": "^15.0.4",
+    "sinon": "^16.1.0",
     "standard": "^17.0.0"
   },
   "dependencies": {
     "flatstr": "^1.0.12",
-    "pino": "^8"
+    "pino": "^8.16.0"
   }
 }
